[package]
name = "virtio-vsock"
version = "0.6.0"
authors = ["rust-vmm community", "rust-vmm AWS maintainers <rust-vmm-maintainers@amazon.com>"]
description = "virtio vsock device implementation"
repository = "https://github.com/rust-vmm/vm-virtio"
keywords = ["virtio", "vsock"]
readme = "README.md"
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"

[dependencies]
virtio-queue = { version = "0.12.0", path = "../virtio-queue" }
virtio-bindings = { path = "../virtio-bindings", version = "0.2.2" }
vm-memory = "0.14.0"

[dev-dependencies]
virtio-queue = { version = "0.12.0", path = "../virtio-queue", features = ["test-utils"] }
vm-memory = { version = "0.14.0", features = ["backend-mmap", "backend-atomic"] }
